# TradeSim-Engine

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
frontend/: app.js  index.html  style.css
include/api/: ApiServer.hpp
include/common/: Config.hpp  Logger.hpp  ThreadSafeQueue.hpp  Types.hpp
include/engine/: Order.hpp  OrderBook.hpp  OrderMatchingEngine.hpp
include/market/: MarketDataFetcher.hpp
include/portfolio/: PositionManager.hpp
include/strategy/: IndicatorEngine.hpp  RiskManager.hpp  TradingStrategy.hpp
include/ui/: DisplayManager.hpp
src/: main.cpp
src/api/: ApiServer.cpp
src/common/: Config.cpp  Logger.cpp
src/engine/: OrderBook.cpp  OrderMatchingEngine.cpp
src/market/: MarketDataFetcher.cpp
src/portfolio/: PositionManager.cpp
src/strategy/: IndicatorEngine.cpp  RiskManager.cpp  TradingStrategy.cpp
src/ui/: DisplayManager.cpp
tests/: CMakeLists.txt  test_indicators.cpp  test_matching_engine.cpp  test_order_book.cpp  test_thread_safe_queue.cpp
